# logger_config

./: README.md  setup.cfg
simple_logger/: __init__.py  simple_logger.py
tests/: check_simple_logger.py
