[metadata]
name = base-simple-logger
author = Betal Berbekov
version = 0.1
author_email = qwantone@gmail.com
license = MIT
long_description = file: README.md
url = https://github.com/insigmo/simple_logger
requires_python = >=2.7
classifiers =
    Programming Language :: Python
platforms = any

[options]
packages = simple_logger